# module_olas_prediction

./: README.md  pyproject.toml
olas_prediction/: component.yaml  run.py  schemas.py
prediction_agent/: component.yaml  run.py
tests/: test_olas_prediction.py
