[tool.poetry]
name = "olas-prediction"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.12.1"
litellm = "^1.35.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
